<resources>
    <!-- Global strings -->
    <string name="app_name">BestelApp</string>
    <string name="test_product">
        Dummy data test
    </string>

    <!-- Strings voor HomeScreenActivity -->
    <string name="order_button">
        Bestellen
    </string>
    <string name="settings_button">
        Instellingen
    </string>
    <string name="balance_button">
        Saldo
    </string>
    <string name="my_orders_button">
        Mijn bestellingen
    </string>

    <!-- Strings voor MainActivity -->
    <string name="order_app_logo">
        Bestelapp
    </string>
    <string name="email">
        E-mail:
    </string>
    <string name="hint_enter_email">
        example123@mail.com
    </string>
    <string name="password">
        Wachtwoord:
    </string>
    <string name="hint_enter_password">
        ***********
    </string>
    <string name="log_in_button">
        Inloggen
    </string>
    <string name="successful_log_in_toast">
        Succesvol ingelogd.
    </string>
    <string name="account_not_found_toast">
        Account niet gevonden.
    </string>

    <!-- Strings voor BalanceActivity-->
    <string name="current_balance_textview">
        Huidig saldo:
    </string>
    <string name="current_balance_view">
        €0,00
    </string>
    <string name="add_balance">
        Voer een bedrag in:
    </string>
    <string name="desired_balance">
        €0,00
    </string>
    <string name="add_balance_button">
        Toevoegen
    </string>

    <!-- Strings BalanceDialogFragment -->
    <string name="max_balance_dialog_message">
        Het is niet mogelijk om meer dan €150 op uw account te hebben.
    Saldo aanvullen tot €150?
    </string>
    <string name="no_amount_entered_toast">
        U heeft geen bedrag ingevoerd.
    </string>
    <string name="not_possible_to_add_nothing_toast">
        Het is niet mogelijk om €0,00 terug te storten op uw rekening.
    </string>
    <string name="max_amount_toast">
         U heeft het maximale bedrag van €150 op uw account staan.
    </string>
    <string name="refund_balance_dialog_message">
        Wilt u het gehele bedrag terug storten?
    </string>
    <string name="balance_dialog_positive_button">
        Ja
    </string>
    <string name="are_you_sure_dialog_message1">
        Weet u zeker dat u\u0020
    </string>
    <string name="are_you_sure_dialog_message2">
        Weet u zeker dat u\u0020
    </string>
    <string name="add_balance_message">
        \u0020euro wil toevoegen?
    </string>
    <string name="refund_from_account_message">
        \u0020euro van uw account wil terugstorten?
    </string>
    <string name="balance_dialog_negative_button">
        Nee
    </string>

    <!-- Strings voor SettingsActivity-->

    <string-array name="language_array_spinner_entries">
        <item>Kies taal...</item>
        <item>Nederlands</item>
        <item>English</item>
    </string-array>

    <string name="personal_data_textview">
        Persoonlijke gegevens
    </string>
    <string name="email_textview">
        Email:
    </string>
    <string name="firstname_textview">
        Voornaam:
    </string>
    <string name="lastname_textview">
        Achternaam:
    </string>
    <string name="age_textview">
        Leeftijd:
    </string>
    <string name="iban_textview">
        Rekeningnummer:
    </string>
    <string name="language_textview">
        Taal:
    </string>
    <string name="menu_button">
        Menu
    </string>
    <string name="save_settings_toast">
        Wijzigingen succesvol opgeslagen
    </string>
    <string name="dialog_message">
        Log opnieuw in om de gewenste taal in te stellen.
    </string>
    <string name="dialog_button">
        Log in
    </string>

    <!--Strings voor OrderDetailActivity-->
    <string name="total_tag_textview">
        Totaal:
    </string>
    <string name="TEST_total_price_textview">
        €0,00
    </string>
    <string name="cancel_order_button">
        Bestelling annuleren
    </string>
    <string name="scan_order_button">
        Bestellen
    </string>
    <string name="price_textview">
        Prijs:
    </string>
    <string name="quantity_textview">
        Aantal:
    </string>
    <string name="product_textview">
        Product:
    </string>

    <!-- Strings voor OrderHistoryActivity-->
    <string name="date_of_the_order_textview">
        Datum:
    </string>
    <string name="price_of_the_order_textview">
        Prijs:
    </string>

    <!-- Strings voor WalletActivity-->
    <string name="go_to_add_balance_button">
        Saldo toevoegen
    </string>
    <string name="go_to_refun_balance_button">
        Saldo terugstorten
    </string>

    <!--Strings voor add balance activity-->
    <string name="current_balance_header">
        Huidig saldo:
    </string>\
    <string name="refund_button_text">
        Terugstorten
    </string>

    <!-- Strings voor ScanActivity -->
    <string name="scan_activity_button">
        Menu
    </string>

    <!-- Strings voor OrderActivity -->
    <string name="total_textview">
        Totaal:
    </string>
    <string name="total_price_textview">
        €0,00
    </string>
    <string name="order_activity_orderButton">
        Bestellen
    </string>

    <!-- Strings voor UnhandledOrderHistoryDetailActivity -->
    <string name ="unhandled_order_header">
        Bestelling 15-05-2017
    </string>
    <string name ="unhandled_order_time_header">
        Tijd:\u0020
    </string>
    <string name ="unhandled_order_time_display">
        22:31
    </string>
    <string name="unhandled_order_price">
        Prijs:\u0020
    </string>
    <string name="unhandled_order_total">
        Totaal:\u0020
    </string>
    <string name="unhandled_order_button">
        Nu betalen
    </string>


    <!-- Strings voor de aid_list -->
    <string name="service_name">
        CardEmulation
    </string>
    <string name="card_title">
        Sample card
    </string>

    <!-- Strings voor de toolbar -->
    <string name="Home_Screen_toolbar">
        Menu
    </string>
    <string name="Balance_toolbar">
        Saldo
    </string>
    <string name="Order_toolbar">
        Bestellen
    </string>
    <string name="Order_Detail_toolbar">
        Huidige Bestelling
    </string>
    <string name="Scan_toolbar">
        Betalen
    </string>
    <string name="Order_History_toolbar">
        Mijn Bestellingen
    </string>
    <string name="Settings_toolbar">
        Instellingen
    </string>
    <string name="Unhandled_Order_toolbar">
        Open Bestelling
    </string>
    <string name="handled_Order_toolbar">
        Voltooide Bestelling
    </string>
    <string name="customer_app_toolbar">
        CustomerApp
    </string>

</resources>