<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.periode4groep2.customerapp.PresentationLayer.AddBalanceActivity"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/tool_bar_no_button"
        layout="@layout/tool_bar_no_button">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/huidigSaldoTextId"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/current_balance_textview"
            android:textColor="@color/colorOrange"
            android:textSize="18dp" />
            <TextView
                android:id="@+id/currentBalance"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/current_balance_view"
                android:textColor="@color/colorOrange"
                android:textSize="18dp" />
        <TextView
            android:id="@+id/balanceID"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/add_balance"
            android:textColor="@color/colorOrange"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/giveBalanceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/desired_balance"
            android:inputType="number"
            android:textSize="40dp" />
        <Button
            android:id="@+id/addBalanceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorOrange"
            android:text="@string/add_balance_button"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>


