<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.periode4groep2.customerapp.PresentationLayer.MyAccountActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_data_textview"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_textview"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:textSize="21sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dummy data test text"
            android:textSize="18sp"
            android:id="@+id/my_account_email"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname_textview"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/my_account_firstname"
            android:text="Dummy data test text "
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname_textview"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dummy data test text "
            android:textSize="18sp"
            android:id="@+id/my_account_lastname"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_textview"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dummy data test text "
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:id="@+id/my_account_age"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="0">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/myAccountBalanceInfoId"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/balance_information_button"
            android:textSize="18sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/myAccountHistoryId"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/order_history_button"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
